# onetagger

./: Cargo.toml  songdownloader.md
client/: package-lock.json
client/src/: App.vue
client/src/scripts/: onetagger.ts  router.ts  settings.ts
client/src/views/: SongsDownloader.vue
crates/onetagger/: Cargo.toml
crates/onetagger-cli/: Cargo.toml
crates/onetagger-cli/src/: main.rs
crates/onetagger-shared/: Cargo.toml
crates/onetagger-shared/src/: lib.rs
crates/onetagger-songdownloader/: Cargo.toml  README.md
crates/onetagger-songdownloader/src/: download_songs.rs  lib.rs  query_url.rs  songdownloaderNotes.md  soundcloud.rs  spotify.rs  url_info.rs  url_info_folder.rs
crates/onetagger-ui/: Cargo.toml
crates/onetagger-ui/src/: socket.rs
crates/onetagger/src/: lib.rs  songsdownloader.rs
