[package]
name = "onetagger-cli"
version = "1.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
convert_case = "0.6"
env_logger = "0.10"
log = "0.4"
serde_json = "1.0"

onetagger-ui = { path = "../onetagger-ui" }
onetagger-tagger = { path = "../onetagger-tagger" }
onetagger-shared = { path = "../onetagger-shared" }
onetagger-autotag = { path = "../onetagger-autotag" }
onetagger-renamer = { path = "../onetagger-renamer" }
onetagger-playlist = { path = "../onetagger-playlist" }
onetagger-platforms = { path = "../onetagger-platforms" }
onetagger-songdownloader = { path = "../onetagger-songdownloader" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"