[package]
name = "onetagger-songdownloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "gzip"] }
scraper = "0.13"
regex = "1.5"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
html-escape = "0.2"
thirtyfour = "0.31"
tempfile = "3.8"
url = "2.4"
chrono = { workspace = true }
rustc-serialize = { workspace = true }
# We'll rely on transitive dependency for rspotify through onetagger-platforms
onetagger-platforms = { path = "../onetagger-platforms" }
onetagger-shared = { path = "../onetagger-shared" }
